Added | Build Docs

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:type" content="article" >
+    <meta property="og:title" content="URL shortening API landing page" >
+    <meta property="og:url" content="https://carlos95hd.github.io/react-url-shortening/" >
+    <meta property="og:image" content="https://res.cloudinary.com/dz209s6jk/image/upload/q_auto,w_700/Challenges/katmpcijwnmclxyfw3wr.jpg">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
